Add encrypted privacy exports
